# rss-generator

./: .gitignore  .mailmap  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT.md  README.md  SECURITY.md  api_trigger.sh  cache  commit_push.sh  context.txt  dummy.txt  extract_log.sh  feeds.opml  index.html  monitor_log.txt  monitor_script.sh  pyproject.toml  reader.html  requirements.txt  run_logs.txt  test_log.txt  trigger_monitor_log.txt  trigger_monitor_workflow.sh  trigger_workflow.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
config/: sites.yaml
core/: __init__.py  cli.py  config.py  dedup.py  engine.py  feed.py  logging_utils.py  onboarding.py  schedule_suggest.py  tmdb.py
data/: skipped.json
docker/: Dockerfile
docs/: architecture.md  dev_context.md  development.md  research.md  summary.md  usage.md
feeds/: 1primeshows-movies.xml  1primeshows-tv.xml  5filme-movies.xml  bingebox-movies.xml  bingebox-tv.xml  cineby-movies.xml  cinebytv-movies.xml  cinebytv-series.xml  cinemaos-movies.xml  cinezo-movies.xml  dozaanimata-movies.xml  f-hdonline.xml  filmebro-movies.xml  filmebro.xml  filmehd-cc-filme.xml  filmehd-cc-seriale.xml  filmehd-cc.xml  filmehd-filme.xml  filmehd-seriale.xml  filmehd.atom.xml  filmehd.xml  filmeonline-uk.xml  filmeonline123-movies.xml  filmflix.xml  flickystream-movies.xml  flickystream-tv.xml  fsharetv-movies.xml  fsonline-episoade.xml  fsonline-film.xml  fsonline.atom.xml  fsonline.xml  ggflix-movies.xml  ggflix-series.xml  hackernews.atom.xml  hackernews.xml  hdtoday-movies.xml  hdtoday-tv-shows.xml  (+36 more)
(+61 files in other folders)
